--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Textutils this is utility to change the text"
+      content="Textutils this is utility to change the text,you can select color,
+      copy text,clear text ,remove extra spaces,number of words,
+      number of characters,minutes,preview"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
